--- a/TODO
+++ b/TODO
@@ -5,6 +5,11 @@ Convert all uses of `error' to have a proper symbol indicator
   confusing output since the display goes to stdout, and the error goes
   to stderr
 
+Turn the testing thing into a more useful test harness: for example,
+make it run all of the tests and report errors for all failures instead
+of aborting on the first error.  Potentially use one of the existing
+testing frameworks that we have in Racket.
+
 Convert the (define foo (lambda (...) ...))s
 
 use structs
